# dakan-api-digdir

./: .dockerignore  .gitignore  Dockerfile  README.md  config-dev-gcp.json  config-dev-sbs.json  config-prod-gcp.json  config-prod-sbs.json  naiserator.yaml  pyproject.toml  remove_apis.ttl
.github/: dependabot.yml
.github/workflows/: on_push.yml  on_release.yml
.nais/: config-dev-gcp.json  config-prod-gcp.json  nais.yaml  redirect.yaml
src/dakan_api_digdir/: main.py
src/dakan_api_digdir/collections/: utils.py
src/dakan_api_digdir/collections/apis/: api.py  catalog.py
src/dakan_api_digdir/collections/datasets/: catalog.py  dataset.py  distribution.py
src/dakan_api_digdir/collections/terms/: collection.py  concept.py
src/dakan_api_digdir/models/: response_model.py
src/dakan_api_digdir/routers/: apis.py  dataset.py  health.py  terms.py
src/digdir_api/: main.py
src/digdir_api/collections/: catalogs.py  collections.py  dataset.py  terms.py  utils.py
src/digdir_api/collections/apis/: api.py  catalog.py
src/digdir_api/collections/datasets/: catalog.py  dataset.py  distribution.py
src/digdir_api/collections/terms/: collection.py  concept.py  terms.py
src/digdir_api/routers/: apis.py  dataset.py  health.py  terms.py
tests/: test_digdirapi.py
tests/digdir_api/collections/: test_utils.py
tests/digdir_api/collections/apis/: test_api.py
tests/digdir_api/collections/terms/: test_collection.py
tests/digdir_api/collections/test_resources/: api_rdf.py  api_response_json.py  common.py  dataset_response_json.py  mock_es_index.py  term_rdf.py  term_response_json.py
