[tool.poetry]
name = "dakan-api-digdir"
version = "1.0.0"
description = ""
authors = ["NADA"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.114.0"
concepttordf = "^2.0.2"
datacatalogtordf = "3.0.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.30.0"
requests = "^2.28.0"
pytest = "^8.0.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["deetly"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=1.4.1"]
build-backend = "poetry.masonry.api"
