[tool.poetry]
name = "dakan-api-digdir"
version = "1.0.0"
description = ""
authors = ["NADA"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
concepttordf = "^3.0.0"
datacatalogtordf = "4.0.0"
fastapi = "^0.122.0"
isodate = "^0.7.2"
pytest = "^9.0.0"
python-dotenv = "^1.0.0"
requests = "^2.28.0"
uvicorn = "^0.38.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["deetly"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=1.4.1"]
build-backend = "poetry.masonry.api"
