[tool.poetry]
name = "dakan-api-digdir"
version = "1.0.0"
description = ""
authors = ["NADA"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
concepttordf = "3.0.1"
datacatalogtordf = "4.0.1"
fastapi = "0.133.1"
isodate = "0.7.2"
python-dotenv = "1.2.1"
requests = "2.32.5"
uvicorn = "0.41.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["deetly"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=1.4.1"]
build-backend = "poetry.masonry.api"
